<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="es.ucm.pad.teamjvr.mylittlebusiness.ProductListActivity" >

    <item
        android:id="@+id/action_addItem"
        android:icon="@android:drawable/ic_input_add"
        android:orderInCategory="100"
        android:title="@string/action_add_product"
        android:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="104"
        android:title="@string/action_settings"
        android:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_preferences"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="103"
        android:title="@string/action_about">
    </item>
    <item
        android:id="@+id/action_stats"
        android:orderInCategory="102"
        android:title="@string/action_stats"
        android:icon="@android:drawable/ic_menu_sort_by_size">
    </item>

</menu>